--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Matthew J. Nicosia</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/desk_layout.css">
 	<link rel="stylesheet" href="css/layout_DT.css">
 	<link rel="stylesheet" href="css/txt.css">
