--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/desk_layout.css">
 	<link rel="stylesheet" href="css/layout_DT.css">
 	<link rel="stylesheet" href="css/txt.css">
+	<link rel="shortcut icon" type="image/png" href="image/favicon.png">
 </head>
 <body class="index">
 	<header class="page-header">
