--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/layout_DT.css">
 	<link rel="stylesheet" href="css/txt.css">
 	<link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
-	<link rel="shortcut icon" type="image/png" href="image/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	<script type="text/javascript" src="JavaScript/lightbox-plus-jquery.min.js"></script>
 </head>
 <body class="work">
