--- a/work.html
+++ b/work.html
@@ -188,7 +188,15 @@
 				<p>
 				
 				</p>
-		</div>	-->
+			</div>	
+
+			<div class="art-block">
+				<a href="images/image_18.png" data-lightbox="mywork" data-title="Diaper Drive Flyer"><img src="images/diaper_flyer.png" class="art-photo"></a>
+				<h4 class="art-title"></h4>
+				<p>
+				
+				</p>
+			</div>
 		</div>
 
 		</div>
